manifests/minio.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: minio-deployment
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: minio
    spec:
      # Refer to the PVC created earlier
      volumes:
      - name: storage
        persistentVolumeClaim:
          # Name of the PVC created earlier
          claimName: minio-pv-claim
      containers:
      - name: minio
        # Pulls the default Minio image from Docker Hub
        image: minio/minio
        args:
        - server
        - /storage
        ports:
        - containerPort: 9000
        # Mount the volume into the pod
        volumeMounts:
        - name: storage # must match the volume name, above
          mountPath: "/storage"
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  # type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: minio

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio
  namespace: spinnaker
spec:
  rules:
  - host: node-web-server.mydomain.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: minio-service
          servicePort: 9000
      - path: "/minio"
        backend:
          serviceName: minio-service
          servicePort: 9000
  backend:
    serviceName: minio-service
    servicePort: 9000
