manifests/php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deployment
  namespace: spinnaker
  labels:
    app: php
spec:
  replicas: 3
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: php
        image: d11wtq/php
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: php-service
  namespace: spinnaker
spec:
  # type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
    # nodePort: 30001
  selector:
    app: php

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: php
  namespace: spinnaker
spec:
  rules:
  - host: node-web-server.mydomain.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: php-service
          servicePort: 8080
      - path: "/minio"
        backend:
          serviceName: minio-service
          servicePort: 9000
  backend:
    serviceName: php-service
    servicePort: 8080


# ---
#
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: php-ingress
#   namespace: spinnaker
# spec:
#   rules:
#   - host: foo.bar.com
#     http:
#       paths:
#       - backend:
#           serviceName: php-service
#           servicePort: 30001
#         path: /foo
#   - host: bar.baz.com
#     http:
#       paths:
#       - backend:
#           serviceName: php-service
#           servicePort: 30001
#         path: /foo
#
#
#   backend:
#     serviceName: php-service
#     servicePort: 8080
#   # nodePort: 40000

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: php-lb
# spec:
#   type: LoadBalancer
#   ports:
#     - port: 8080
#       targetPort: 8080
#       nodePort: 32000
#       protocol: TCP
#   selector:
#     app: php
