manifests/spinnaker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: hal-deployment
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hal
    spec:
      nodeSelector:
        node-role.kubernetes.io/master: "true"
      volumes:
      - name: kube-ssl
        persistentVolumeClaim:
          claimName: k8s-ssl-claim
      - name: hal-storage
        persistentVolumeClaim:
          claimName: hal-pv-claim
      - name: hal-kube-storage
        persistentVolumeClaim:
          claimName: hal-kube-pv-claim
      containers:
      - name: hal
        image: gcr.io/spinnaker-marketplace/halyard:stable
        ports:
        - containerPort: 8084
        - containerPort: 9000
        # Mount the volume into the pod
        volumeMounts:
        - name: kube-ssl # must match the volume name, above
          mountPath: "/etc/kubernets/ssl"
        - name: hal-storage # must match the volume name, above
          mountPath: "/home/spinnaker/.hal"
        - name: hal-kube-storage # must match the volume name, above
          mountPath: "/home/spinnaker/.kube"

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spinnaker
  namespace: spinnaker
spec:
  rules:
  - host: spinnaker.mydomain.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: spin-deck
          servicePort: 9000
  - host: spinnaker-api.mydomain.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: spin-gate
          servicePort: 8084
